# bitcoin-ffi

./: .gitignore  Cargo.toml  README.md  build.rs  uniffi.toml
.github/workflows/: kotlin.yml  rust.yml
bitcoin-ffi-jvm/: .gitignore  build.gradle.kts  settings.gradle.kts
bitcoin-ffi-jvm/lib/: build.gradle.kts
bitcoin-ffi-jvm/lib/src/test/kotlin/org/bitcoindevkit/bitcoinffi/: LibraryTest.kt
scripts/: uniffi_bindgen_generate_kotlin.sh
src/: bitcoin.udl  error.rs  lib.rs  macros.rs
uniffi-bindgen/: Cargo.toml
