[package]
name = "bitcoin-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "bitcoin_ffi"

[features]
default = ["uniffi/cli"]

[dependencies]
bitcoin = { version = "0.31.2" }
uniffi = { version = "=0.28.0" }

[build-dependencies]
uniffi = { version = "=0.28.0", features = ["build"] }
