[package]
name = "bitcoin-ffi"
version = "0.1.3"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "bitcoin_ffi"

[features]
default = ["uniffi/cli"]

[dependencies]
bitcoin = { version = "0.32.4", features = ["base64"] }
uniffi = { version = "0.29.1" }
thiserror = "1.0.58"

[build-dependencies]
uniffi = { version = "0.29.1", features = ["build"] }
